--- a/package.json
+++ b/package.json
@@ -207,7 +207,10 @@
       "node-llama-cpp",
       "protobufjs",
       "sharp"
-    ]
+    ],
+    "patchedDependencies": {
+      "@mariozechner/pi-ai": "patches/@mariozechner__pi-ai.patch"
+    }
   },
   "vitest": {
     "coverage": {
